@@ -10,7 +10,8 @@ import sys
 import mock
 from mock import (
     call, DEFAULT, patch, sentinel,
-    MagicMock, Mock, NonCallableMock
+    MagicMock, Mock, NonCallableMock,
+    mocksignature
 )
 
 
@@ -787,27 +788,28 @@ class MockTest(unittest2.TestCase):
         self.assertNotIsInstance(mock(), Subclass)
 
 
-    def DONTtest_args_list_contains_call_list(self):
-        mock = Mock()
-        mock(1, 2)
-        mock(a=3)
-        mock(3, 4)
-        mock(b=6)
+    def test_args_list_contains_call_list(self):
+        for mock in Mock(), mocksignature(lambda *args, **kwargs: None):
+            mock(1, 2)
+            mock(a=3)
+            mock(3, 4)
+            mock(b=6)
 
-        for kall in call(1, 2), call(a=3), call(3, 4), call(b=6):
-            self.assertTrue(kall in mock.call_args_list)
+            for kall in call(1, 2), call(a=3), call(3, 4), call(b=6):
+                self.assertTrue(kall in mock.call_args_list)
 
-        calls = [call(a=3), call(3, 4)]
-        self.assertTrue(calls in mock.call_args_list)
-        calls = [call(1, 2), call(a=3)]
-        self.assertTrue(calls in mock.call_args_list)
-        calls = [call(3, 4), call(b=6)]
-        self.assertTrue(calls in mock.call_args_list)
-        calls = [call(3, 4)]
-        self.assertTrue(calls in mock.call_args_list)
+            continue
+            calls = [call(a=3), call(3, 4)]
+            self.assertTrue(calls in mock.call_args_list)
+            calls = [call(1, 2), call(a=3)]
+            self.assertTrue(calls in mock.call_args_list)
+            calls = [call(3, 4), call(b=6)]
+            self.assertTrue(calls in mock.call_args_list)
+            calls = [call(3, 4)]
+            self.assertTrue(calls in mock.call_args_list)
 
-        self.assertFalse(call('fish') in mock.call_args_list)
-        self.assertFalse([call('fish')] in mock.call_args_list)
+            self.assertFalse(call('fish') in mock.call_args_list)
+            self.assertFalse([call('fish')] in mock.call_args_list)
 
 """
 * repr should use new name (so new name should default to name if not None)
