@@ -73,6 +73,7 @@ CHANGELOG
 2011/XX/XX Version 0.8.0 alpha 3
 --------------------------------
 
+* `callargs` changed to *always* be a three-tuple of `(name, args, kwargs)`
 * Addition of `mock_calls` list for *all* calls (including magic methods and
   chained calls)
 * Extension of `call` object to support chained calls and `callargs` for better
